# ews-client

./: .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  README_zh.md  pyproject.toml
docs/: development.md  python-bindings-guide.md
docs/api/: python.md  rust.md
docs/examples/: basic_usage.md
docs/reference/microsoft_learn/: README.md  baseshape.md  distinguished_folder_id.md  extendedproperty.md  findfolder_operation.md  folders_and_items_in_ews_in_exchange.md  foldershape.md  getfolder_operation.md  getitem_operation.md  itemid.md  itemshape.md  mark_all_items_as_read_operation.md  pidtaghasattachments_canonical_property.md  property_types.md  responsecode.md  senditem_operation.md  sync_folder_hierarchy_operation.md  synchronization_best_practices.md  update_item_operation.md
docs/reference/microsoft_learn/concepts/: how_to_synchronize_items.md  mailbox_synchronization_and_ews_in_exchange.md
docs/reference/microsoft_learn/mapi/: pidtagmessageflags_canonical_property.md
docs/reference/microsoft_learn/operations/: copyitem_operation.md  create_item_operation.md  deleteitem_operation.md  finditem_operation.md  moveitem_operation.md
docs/reference/microsoft_learn/types/: baseitemid.md  ews_identifiers.md  fielduri.md  folderid.md  mimecontent.md  path.md  recipients_arrayofrecipientstype.md  updateitem.md
docs/roadmap/: architecture.md  implementation-plan.md  reference-mapping.md
ews-client-core/: Cargo.toml
ews-client-core/src/: headers.rs  lib.rs
ews-client-core/src/client/: credentials.rs  error.rs  headers.rs  mod.rs  server_version.rs  types.rs
ews-client-core/src/client/operations/: change_read_status.rs  check_connectivity.rs  create_folder.rs  create_message.rs  delete_folder.rs  delete_messages.rs  get_message.rs  mark_as_junk.rs  mod.rs  send_message.rs  sync_folder_hierarchy.rs  sync_messages.rs  update_folder.rs  update_item.rs
ews-client-core/src/client/operations/copy_move_operations/: folder.rs  item.rs  mod.rs
ews-client-core/tests/: README.md  folder_operations.rs  infrastructure_test.rs  integration_mock.rs  integration_real.rs  item_operations.rs  lib.rs  operations_test.rs  unit.rs
ews-client-core/tests/common/: fixtures.rs  mock_server.rs  mod.rs  test_utils.rs
ews-client-core/tests/integration/mock/: folder_operations.rs  infrastructure.rs  item_operations.rs
ews-client-core/tests/integration/real/: folder_operations.rs
ews-client-python/: Cargo.toml
ews-client-python/src/: client.rs  error.rs  lib.rs  types.rs
examples/python/: basic_usage.py
examples/rust/: basic_client.rs
python/ews_client/: __init__.py  _ews_client.pyi  types.py  types.pyi
tests/python/: __init__.py  conftest.py  test_client.py
tests/rust/: mod.rs
