[package]
name = "ews-client-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ews.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
url.workspace = true
log.workspace = true
mail-parser.workspace = true
mail-builder.workspace = true
dashmap.workspace = true
crossbeam.workspace = true

[dev-dependencies]
wiremock.workspace = true
