[package]
name = "ews-client-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "ews_client"
crate-type = ["cdylib"]

[dependencies]
ews-client-core = { path = "../ews-client-core" }
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
tokio.workspace = true

[features]
extension-module = ["pyo3/extension-module"]
